data/derived/fa15/progs/unify/prog2703.ml.out
Characters 54-62:
  | 0 -> buildX() || buildY()
         ^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         bool
